# BIMAP

./: .gitignore  LICENSE.txt  README.md  corr.py  main.py  new 1  new 2  new 3  pyproject.toml
bimap/src/: __init__.py  analyze_results.py  ants_test.ipynb  blob_detection.ipynb  caiman_miniforge_hack.py  calc_all_metrics.py  contour_lines.ipynb  corr.py  cotracker_test.ipynb  cotracker_utils.py  experiments.yaml  gradient_ssim.ipynb  lddmm_test.ipynb  mc_ants.py  mc_cotracker.ipynb  mc_cotracker.py  mc_lddmms.py  normcorre_test.ipynb  orchestrator.py  pipeline.ipynb  roi_corr.ipynb  test_ants.py  torch_lddmm.py  utils.py  voxelmorph_test.ipynb
src/: Untitled.ipynb  corr.py  test_ants.py
src/bimap/: analyze_results.py  compute_artifact_crispness.py  experiments.yaml  floodfill.py  make_8_plots_new.py  make_plots.py  mc_ants.py  mc_cotracker.py  mc_lddmms.py  mc_normcorre.py  mc_normcorre_callee.py  orchestrator.py  recompute_metrics_from_artifacts.py  utils.py
src/bimap/plotting/: make_8_plots_new.py  make_plots.py  plot_correlation_across_frames.py  raw_frames_plot.py
src/notebooks/: blob_detection.ipynb  contour_lines.ipynb  cotracker_test.ipynb  mc_cotracker.ipynb  pipeline.ipynb  roi_corr.ipynb
