[project]
name = "bimap"
version = "0.1.0"
authors = [{name="Moritz Palm", email="moritz.palm@fau.de"}]
description = "Nonrigid Image Segmentation for Calcium Imaging Data"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "antspyx>=0.5.3",
    "hatchling>=1.27.0",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "polars>=1.29.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "torch<2.3.0",
    "tqdm>=4.67.1",
    "voxelmorph>=0.2",
]

[project.urls]
Repository = "https://github.com/MoritzPalm/BIMAP"
Issues = "https://github.com/MoritzPalm/BIMAP/issues"

[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/**"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["T201"]
